--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@ html {
     box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: inherit;
 }
 
@@ -13,23 +15,24 @@ body {
 }
 
 .page-container {
-    
     width: 100%;
     height: 1180;
     min-width: 960px;
-    max-width: 1600px;
+    max-width: 1349px;
     left: 0%;
     top: 0%;
 }
 
-button:hover{
+button:hover {
     border: 2px solid rgb(87, 87, 87);
 }
 
 
 /*----------------------------------*/
 
+
 /*-----------------------------------------------------*/
+
 
 /*-----------SIDE_BAR----------------*/
 
@@ -37,10 +40,10 @@ button:hover{
     /* sidebar */
     display: block;
     position: absolute;
-    width: 270px;
+    width: 225px;
+    max-width: 255px;
     height: 1024px;
-    left: -27px;
-    
+    left: 0px;
     background: none;
     /*mix-blend-mode: normal;*/
 }
@@ -48,12 +51,10 @@ button:hover{
 .logo {
     /* img_logo 1 */
     position: absolute;
-    width: 100%;
-    height: 234px;
-    left: 10%;
-    top: -20px;
-    background: url(../img/img_logo.png);
-    transform: scale(0.9, 0.9)
+    width: 125%;
+    left: -30px;
+    top: -15px;
+    transform: scale(0.7, 0.7)
 }
 
 .effect_sb {
@@ -62,7 +63,7 @@ button:hover{
     position: absolute;
     width: 100%;
     height: 100%;
-    left: -26px;
+    left: 0px;
     top: 0px;
     background: url(../img/effect_sb.png);
 }
@@ -72,20 +73,23 @@ button:hover{
     position: absolute;
     width: 100%;
     height: 100%;
-    left: -26px;
+    left: 0px;
     top: 0px;
     background: linear-gradient(180deg, #A9DE55 0%, #707E59 100%);
-    border-radius: 30px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
 }
+
 
 /*----------------------------------*/
 
+
 /*-----------------------------------------------------*/
+
 
 /*-----------TOP_BAR----------------*/
 
 .topbar {
-    display: block;
     position: fixed;
     width: 82.5%;
     max-width: 1600px;
@@ -149,9 +153,19 @@ button:hover{
     background: rgb(73, 73, 73);
 }
 
+.add_AD {
+    position: absolute;
+    width: 20%;
+    height: 100%;
+    left: 107%;
+    border: none;
+    background: #4255F4;
+    border-radius: 30px;
+}
+
 .profilebar {
     position: absolute;
-    width: 300px;
+    width: 200px;
     height: 74%;
     top: 13%;
     right: 10px;
@@ -160,7 +174,7 @@ button:hover{
 
 .block_message {
     position: absolute;
-    width: 35%;
+    width: 55%;
     height: 100%;
     border: none;
     border-right: 2px solid #D3DBCB;
@@ -189,7 +203,7 @@ button:hover{
 
 .avatar {
     position: absolute;
-    right: 40%;
+    right: 10%;
     height: 100%;
     width: 30px;
     background: #D3DBCB;
@@ -204,6 +218,7 @@ button:hover{
     left: 17%;
     top: 22%;
 }
+
 .bell_icon {
     position: absolute;
     width: 66%;
@@ -215,12 +230,13 @@ button:hover{
 
 /*----------------------------------*/
 
+
 /*-----------------------------------------------------*/
+
 
 /*-----------CONTENT_BOCK----------------*/
 
-.content_block{
-    
+.content_block {
     position: absolute;
     left: 230px;
     top: 50px;
@@ -230,31 +246,30 @@ button:hover{
     height: 974px;
     border-radius: 22px;
     background: rgb(255, 255, 255);
-    
 }
+
 
 /*----------------------------------*/
 
+
 /*-----------------------------------------------------*/
+
 
 /*-----------FUTER----------------*/
 
-.footer{
+.footer {
     position: absolute;
     top: 1034px;
     width: 100%;
     height: 150px;
     border-top: 20px solid rgb(53, 53, 53);
     background: rgb(61, 61, 61);
-    
-
 }
 
-#lofofooter{
+#lofofooter {
     display: block;
     position: absolute;
     height: 70px;
-   
     bottom: 20px;
     right: 20px;
 }
