--- a/css/style.css
+++ b/css/style.css
@@ -39,20 +39,17 @@
         display: block;
         position: absolute;
         width: 225px;
-        max-width: 255px;
         height: 1024px;
         left: 0px;
         top: 0px;
         background: none;
-        /*mix-blend-mode: normal;*/
     }
     
     .logo {
-        /* img_logo 1 */
         position: absolute;
-        width: 125%;
-        left: -30px;
-        top: -15px;
+        width: 54%;
+        left: 23%;
+        top: 15px;
         transform: scale(0.7, 0.7)
     }
     
@@ -74,7 +71,7 @@
         height: 100%;
         left: 0px;
         top: 0px;
-        background: linear-gradient(180deg, #A9DE55 0%, #707E59 100%);
+        background: linear-gradient(180deg, #A9DE55 0%, rgb(124, 167, 57) 100%);
         border-top-right-radius: 30px;
         border-bottom-right-radius: 30px;
     }
@@ -272,6 +269,24 @@
         left: 17%;
         top: 15%;
     }
+    
+    .but_sign_in {
+        position: absolute;
+        width: 80px;
+        height: 74%;
+        top: 13%;
+        right: 2%;
+        border: none;
+        background: #4255F4;
+        border-radius: 30px;
+        padding-left: 31px;
+        text-align: left;
+        font-stretch: wider;
+        color: #FFFFFF;
+        font-size: 11px;
+        line-height: 12px;
+        letter-spacing: 0.1em;
+    }
     /*----------------------------------*/
     /*-----------------------------------------------------*/
     /*-----------CONTENT_BOCK----------------*/
@@ -295,7 +310,7 @@
         position: absolute;
         top: 1034px;
         width: 100%;
-        height: 150px;
+        height: 500px;
         border-top: 20px solid rgb(53, 53, 53);
         background: rgb(61, 61, 61);
     }
@@ -306,4 +321,200 @@
         height: 70px;
         bottom: 20px;
         right: 20px;
+    }
+    /*----------------------------------*/
+    /*-----------------------------------------------------*/
+    /*-----------SIGN IN BAR----------------*/
+    
+    .login_bg {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background: #6868689f;
+    }
+    
+    .login-wrap {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        left: -100%;
+        margin: auto;
+        max-width: 550px;
+        min-height: 600px;
+        max-height: 640px;
+        border-radius: 30px;
+        background: linear-gradient(180deg, #A9DE55 0%, rgb(124, 167, 57) 100%);
+    }
+    
+    .login-html {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        padding: 90px 70px 50px 70px;
+    }
+    
+    .sign-in {
+        margin-bottom: 10px;
+    }
+    
+    .login-html .sign-in-htm,
+    .login-html .sign-up-htm {
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        position: absolute;
+        transform: rotateY(180deg);
+        backface-visibility: hidden;
+        transition: all .4s linear;
+    }
+    
+    .login-html .sign-in,
+    .login-html .sign-up,
+    .login-form .group .check {
+        display: none;
+    }
+    
+    .login-html .tab,
+    .login-form .group .label,
+    .login-form .group .button {
+        text-transform: uppercase;
+    }
+    
+    .label {
+        color: #FFFFFF;
+        margin-bottom: 7px;
+    }
+    /*.button:hover {
+        border: 2px solid rgb(87, 87, 87);
+    }*/
+    
+    .login-html .tab {
+        font-size: 22px;
+        margin-right: 15px;
+        padding-bottom: 5px;
+        margin: 0 15px 10px 0;
+        display: inline-block;
+        border-bottom: 2px solid transparent;
+    }
+    
+    .login-html .sign-in:checked+.tab,
+    .login-html .sign-up:checked+.tab {
+        color: #fff;
+        border-color: #1161ee;
+    }
+    
+    .login-form {
+        min-height: 345px;
+        position: relative;
+        perspective: 1000px;
+        transform-style: preserve-3d;
+    }
+    
+    .login-form .group {
+        margin-bottom: 15px;
+    }
+    
+    .login-form .group .label,
+    .login-form .group .input,
+    .login-form .group .button {
+        width: 100%;
+        color: #fff;
+        display: block;
+    }
+    
+    .login-form .group .input,
+    .login-form .group .button {
+        border: none;
+        padding: 15px 20px;
+        border-radius: 25px;
+        background: rgba(0, 0, 0, 0.226);
+    }
+    
+    .login-form .group input[data-type="password"] {
+        text-security: circle;
+        -webkit-text-security: circle;
+    }
+    
+    .login-form .group .label {
+        color: rgb(255, 255, 255);
+        font-size: 12px;
+    }
+    
+    .login-form .group .button {
+        background: #1161ee;
+    }
+    
+    .login-form .group label .icon {
+        width: 15px;
+        height: 15px;
+        border-radius: 2px;
+        position: relative;
+        display: inline-block;
+        background: rgb(255, 255, 255);
+    }
+    
+    .login-form .group label .icon:before,
+    .login-form .group label .icon:after {
+        content: '';
+        width: 10px;
+        height: 2px;
+        background: #fff;
+        position: absolute;
+        transition: all .2s ease-in-out 0s;
+    }
+    
+    .login-form .group label .icon:before {
+        left: 3px;
+        width: 5px;
+        bottom: 6px;
+        transform: scale(0) rotate(0);
+    }
+    
+    .login-form .group label .icon:after {
+        top: 6px;
+        right: 0;
+        transform: scale(0) rotate(0);
+    }
+    
+    .login-form .group .check:checked+label {
+        color: #fff;
+    }
+    
+    .login-form .group .check:checked+label .icon {
+        background: #1161ee;
+    }
+    
+    .login-form .group .check:checked+label .icon:before {
+        transform: scale(1) rotate(45deg);
+    }
+    
+    .login-form .group .check:checked+label .icon:after {
+        transform: scale(1) rotate(-45deg);
+    }
+    
+    .login-html .sign-in:checked+.tab+.sign-up+.tab+.login-form .sign-in-htm {
+        transform: rotate(0);
+    }
+    
+    .login-html .sign-up:checked+.tab+.login-form .sign-up-htm {
+        transform: rotate(0);
+    }
+    
+    .hr {
+        height: 2px;
+        margin: 60px 5px 50px 5px;
+        background: rgba(255, 255, 255, .2);
+    }
+    
+    .foot-lnk {
+        text-align: center;
+    }
+    
+    .login-form {
+        margin-top: 20px;
+    }
+    
+    #tab-1 {
+        margin-bottom: 20px;
     }
